--- a/booking.html
+++ b/booking.html
@@ -17,21 +17,47 @@
   </head>
   <body>
     <!-- Main header + Nav Toggle -->
-    <nav class="navbar" role="navigation">
-      <div class="container-fluid">
-      <!-- Logo for ipad -->
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-sm-12 visible-sm">
-            <a class="logo navbar-brand" href="#"><img src="assets/logo-dark.svg" alt="Airfinity Airlines" role="logo" width="250px" height="50px"></a>
+    <nav class="" role="navigation">
+      <div class="container-fluid no_pad">
+      <!-- Menu for Desktop -->
+        <div class="mast-md navbar visible-lg visible-md">
+          <a class="logo logo-md navbar-brand" href="index.html"><img src="assets/logo.svg" alt="Airfinity Airlines" height="70px"  class="" role="logo" ></a>
+          <div class="row">
+            <div class="col-md-6 col-md-push-3 deco_none sm-menu">
+              <a href="booking.html"><div class="sm-menu-active col-md-2"><p>Booking</p></div></a>
+              <a href="blog.html"><div class="col-md-2 "><p>Travel Blog</p></div></a>
+              <a href="flyer.html"><div class="col-md-2 "><p>Frequent Flyer</p></div></a>
+              <a href="pledge.html"><div class="col-md-2"><p>Our Pledge</p></div></a>
+            </div>
+          </div>
+        </div>
+      <!--Menu for ipad -->
+        <div class="row visible-sm ">
+          <div class="col-sm-5 col-sm-push-3">
+            <a class="logo logo-ipad navbar-brand" href="index.html"><img src="assets/logo-dark.svg" alt="Airfinity Airlines"  class="text-center" role="logo" ></a>
+          </div> 
+        </div>
+        <div class="row col-sm-12 mast visible-sm">
+          <div class="col-sm-3">
+            <a href="booking.html"><p class="sm-menu sm-menu-active">Booking</p></a>
+          </div>
+          <div class="col-sm-3">
+            <a href="blog.html"><p class="sm-menu">Travel Blog</p></a>
+          </div>
+          <div class="col-sm-3">
+            <a href="flyer.html"><p class="sm-menu">Frequent Flyer</p></a>
+          </div>
+          <div class="col-sm-3">
+            <a href="pledge.html"><p class="sm-menu">Our Pledge</p></a>
           </div>
         </div>
       </div>
-        <div class="navbar-header mast">
+      <!-- Menu for Mobile -->
+      <div class="navbar-header mast visible-xs">
           <div class="row">
             <a class="logo navbar-brand" href="index.html"><img src="assets/logo.svg" alt="Airfinity Airlines" role="logo" width="250px" height="50px" class="navbar-left col-xs-10 hidden-sm"></a>
-            <button type="button" class="navbar-toggle menu-glyph navbar-right col-xs-2" data-toggle="collapse" data-target="#main-menu">
-              <span class="glyphicon glyphicon-th-list "></span>
+            <button type="button" class="navbar-toggle menu-glyph navbar-right col-xs-4" data-toggle="collapse" data-target="#main-menu">
+              <span class="glyphicon glyphicon-th-list menu"></span>
             </button>
 
           </div>
@@ -41,7 +67,32 @@
     <!-- Navigation Options -->
     <div class="collapse navbar-collapse" id="main-menu">
       <ul class="navbar-nav nav navbar-right drop-menu hidden-sm hidden-md hidden-lg">
-        <li class=""><div class="drop-menu1 drop-menu-active"><a href="#">Booking</a></div></li>
+        <li>
+          <div class="no_pad container-fluid">
+          <div class="row">
+            <div id="carousel-index" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="item">
+                  <img class="img-responsive" width="100%" src="assets/slider/4.jpg" alt="slider1">
+                <div class="carousel-caption">
+                </div>
+              </div>
+              <div class="item">
+                <img class="img-responsive" width="100%" src="assets/slider/5.jpg" alt="slider2">
+                <div class="carousel-caption">
+                </div>
+              </div>  
+              <div class="item active">
+                <img class="img-responsive" width="100%" src="assets/slider/6.jpg" alt="slider3">
+                <div class="carousel-caption">
+                </div>
+              </div>
+            </div>
+          </div>
+          </div>
+
+        </li>
+        <li class=""><div class="drop-menu1 drop-menu-active"><a href="booking.html">Booking</a></div></li>
         <li class=""><div class="drop-menu2"><a href="blog.html">Travel Blog</a></div></li>
         <li class=""><div class="drop-menu3"><a href="flyer.html">Frequent Flyer</a></div></li>
         <li class=""><div class="drop-menu4"><a href="pledge.html">Our Pledge</a></div></li>
@@ -59,9 +110,11 @@
                   <p class="vert_bot col-xs-6">From</p>
                   <h2 class="col-xs-6">Flight</h2>
                 </div>
-                <input type="string" class="form-control text-input" id="booking-departure" placeholder="Departure City">
-                <p>To</p>
-                <input type="string" class="form-control text-input" id="booking-departure" placeholder="Destination City">
+                <div class="row">
+                  <input type="string" class="form-control text-input col-xs-12 col-lg-4" id="booking-departure" placeholder="Departure City">
+                  <p class="col-xs-2 col-lg-3">To</p>
+                  <input type="string" class="form-control text-input col-xs-12 col-lg-4" id="booking-departure" placeholder="Destination City">
+                </div>
               </div>
               <!-- Section -->
               <div class="form-group">
@@ -69,16 +122,21 @@
                   <p class="vert_bot col-xs-6">From</p>
                   <h2 class="col-xs-6">Date</h2>
                 </div>
-                <input type="date" class="form-control text-input" id="booking-date-from" placeholder="Date to Depart">
-                <p>To</p>
-                <input type="date" class="form-control text-input" id="booking-date-to" placeholder="Date to Return">
+                <div class="row">
+                <input type="date" class="form-control text-input col-sm-12" id="booking-date-from" placeholder="Date to Depart">
+                <p class="col-xs-12 col-lg-3">To </p>
+                <input type="date" class="form-control text-input col-sm-12" id="booking-date-to" placeholder="Date to Return">
+                </div>
+
               </div>
               <!-- Section -->
               <div class="form-group">
                 <h2>Rental</h2>
+                <div class="row">
                 <input type="string" class="form-control text-input" id="booking-vehicle" placeholder="Rental Type">
-                <p>For</p>
+                <p class="col-xs-2 col-lg-3">For</p>
                 <input type="string" class="form-control text-input" id="booking-rental-period" placeholder="Rental period">
+                </div>
               </div>
         <!-- Inputs End and button below -->
               <div class="spacer"></div>
