--- a/flyer_acc.html
+++ b/flyer_acc.html
@@ -16,22 +16,51 @@
 
   </head>
   <body>
-    <!-- Main header + Nav Toggle -->
-    <nav class="navbar" role="navigation">
-      <div class="container-fluid">
-      <!-- Logo for ipad -->
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-sm-12 visible-sm">
-            <a class="logo navbar-brand" href="#"><img src="assets/logo-dark.svg" alt="Airfinity Airlines" role="logo" width="250px" height="50px"></a>
+   <!-- Main header + Nav Toggle -->
+    <nav class="" role="navigation">
+      <div class="container-fluid no_pad">
+      <!-- Main header + Nav Toggle -->
+    <nav class="" role="navigation">
+      <div class="container-fluid no_pad">
+      <!-- Menu for Desktop -->
+        <div class="mast-md navbar visible-lg visible-md">
+          <a class="logo logo-md navbar-brand" href="index.html"><img src="assets/logo.svg" alt="Airfinity Airlines" height="70px"  class="" role="logo" ></a>
+          <div class="row">
+            <div class="col-md-6 col-md-push-3 deco_none sm-menu">
+              <a href="booking.html"><div class="col-md-2"><p>Booking</p></div></a>
+              <a href="blog.html"><div class="col-md-2"><p>Travel Blog</p></div></a>
+              <a href="flyer.html"><div class="col-md-2 sm-menu-active"><p>Frequent Flyer</p></div></a>
+              <a href="pledge.html"><div class="col-md-2"><p>Our Pledge</p></div></a>
+            </div>
+          </div>
+        </div>
+      <!--Menu for ipad -->
+        <div class="row visible-sm ">
+          <div class="col-sm-5 col-sm-push-3">
+            <a class="logo logo-ipad navbar-brand" href="index.html"><img src="assets/logo-dark.svg" alt="Airfinity Airlines"  class="text-center" role="logo" ></a>
+          </div> 
+        </div>
+        <div class="row col-sm-12 mast visible-sm">
+          <div class="col-sm-3">
+            <a href="booking.html"><p class="sm-menu">Booking</p></a>
+          </div>
+          <div class="col-sm-3">
+            <a href="blog.html"><p class="sm-menu">Travel Blog</p></a>
+          </div>
+          <div class="col-sm-3">
+            <a href="flyer.html"><p class="sm-menu sm-menu-active">Frequent Flyer</p></a>
+          </div>
+          <div class="col-sm-3">
+            <a href="pledge.html"><p class="sm-menu">Our Pledge</p></a>
           </div>
         </div>
       </div>
-        <div class="navbar-header mast">
+      <!-- Menu for Mobile -->
+      <div class="navbar-header mast visible-xs">
           <div class="row">
             <a class="logo navbar-brand" href="index.html"><img src="assets/logo.svg" alt="Airfinity Airlines" role="logo" width="250px" height="50px" class="navbar-left col-xs-10 hidden-sm"></a>
-            <button type="button" class="navbar-toggle menu-glyph navbar-right col-xs-2" data-toggle="collapse" data-target="#main-menu">
-              <span class="glyphicon glyphicon-th-list "></span>
+            <button type="button" class="navbar-toggle menu-glyph navbar-right col-xs-4" data-toggle="collapse" data-target="#main-menu">
+              <span class="glyphicon glyphicon-th-list menu"></span>
             </button>
 
           </div>
@@ -41,9 +70,34 @@
     <!-- Navigation Options -->
     <div class="collapse navbar-collapse" id="main-menu">
       <ul class="navbar-nav nav navbar-right drop-menu hidden-sm hidden-md hidden-lg">
+        <li>
+          <div class="no_pad container-fluid">
+          <div class="row">
+            <div id="carousel-index" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="item">
+                  <img class="img-responsive" width="100%" src="assets/slider/4.jpg" alt="slider1">
+                <div class="carousel-caption">
+                </div>
+              </div>
+              <div class="item">
+                <img class="img-responsive" width="100%" src="assets/slider/5.jpg" alt="slider2">
+                <div class="carousel-caption">
+                </div>
+              </div>  
+              <div class="item active">
+                <img class="img-responsive" width="100%" src="assets/slider/6.jpg" alt="slider3">
+                <div class="carousel-caption">
+                </div>
+              </div>
+            </div>
+          </div>
+          </div>
+
+        </li>
         <li class=""><div class="drop-menu1"><a href="booking.html">Booking</a></div></li>
         <li class=""><div class="drop-menu2"><a href="blog.html">Travel Blog</a></div></li>
-        <li class=""><div class="drop-menu3 drop-menu-active"><a href="#">Frequent Flyer</a></div></li>
+        <li class=""><div class="drop-menu3 drop-menu-active"><a href="flyer.html">Frequent Flyer</a></div></li>
         <li class=""><div class="drop-menu4"><a href="pledge.html">Our Pledge</a></div></li>
       </ul>
     </div>
@@ -52,27 +106,31 @@
       <!-- Account Login thing -->
       <div class="row">
         <div class="col-xs-12">
-          <img class="img-responsive col-xs-3 img-circle" src="assets/mcbag_pro.jpg" alt="account Picture">
+          <img class="img-responsive col-xs-3 col-sm-2 img-circle" src="assets/mcbag_pro.jpg" alt="account Picture">
           <p class="col-xs-6 vert-mid">
             Logged in as:<br>
             <span class="bold">Travel McBags</span>            
           </p>
-
+          <button type="button" class="btn col-xs-12 col-sm-4 deco_none btn-danger"><a href="flyer.html"><span class="glyphicon glyphicon-remove"></span>Logout</a></button>
 
         </div>
         <div><hr></div>
       </div>
-      <h1 class="text-center">Frequent <span class="bold">Flyer Points</span></h1>
+      <h1 class="text-center visible-xs">Frequent <span class="bold">Flyer Points</span></h1>
+      
       <div class="row">
-        <div class="col-xs-8 col-xs-offset-2">
+        <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-pull-1 col-md-3 col-lg-3">
           <div class="img-circle flyer_points">
             <h4>9001 mi</h4>
           </div>
         </div>
-        <div class="col-xs-10 col-xs-offest-1">
+        <h1 class="text-right visible-sm ">Frequent <span class="bold">Flyer Points</span></h1>
+        <div class="col-xs-10 col-xs-offest-1 col-sm-6 col-sm-offset-0">
           <h3 class=""><span class="bold">Points Expire on:</span><br>2016 - 11 - 20</h3>
         </div>
       </div>
+      <div class="spacer"></div>
+      <!-- Rewards table -->
       <div class="row rewards_table ">
         <div class="col-xs-12">
           <div class="col-xs-12 rewards_odd">
